--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -119,6 +119,11 @@
       <artifactId>openpdf</artifactId>
       <version>1.3.35</version>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.17.2</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
