--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/ai_smart?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://120.27.212.35:13307/ai_smart?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: 123456
+    password: qwe123999mn@123
   jpa:
     hibernate:
       ddl-auto: validate
@@ -18,6 +18,7 @@ spring:
       mode: always
   flyway:
     enabled: true
+    baseline-on-migrate: true
   servlet:
     multipart:
       max-file-size: 100MB
@@ -33,13 +34,13 @@ app:
     chat-provider: openai
     embedding-provider: alibaba
     chat-model: nvidia/nemotron-3-nano-30b-a3b
-    embedding-model: qwen3-vl-rerank
+    embedding-model: multimodal-embedding-v1
     openai:
       base-url: https://integrate.api.nvidia.com/v1
-      api-key: 
+      api-key: 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
     alibaba:
       base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
-      api-key: 
+      api-key: sk-3423fb22eb9a45b2b0a450d81654f810
     baidu:
       auth-url: https://aip.baidubce.com/oauth/2.0/token
       chat-url: https://qianfan.baidubce.com/v2/chat/completions
