--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -3,9 +3,16 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://120.27.212.35:13307/ai_smart?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://120.27.212.35:13307/ai_smart?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&autoReconnect=true
     username: root
     password: qwe123999mn@123
+    hikari:
+      connection-test-query: SELECT 1
+      minimum-idle: 2
+      maximum-pool-size: 20
+      idle-timeout: 300000
+      max-lifetime: 900000
+      keepalive-time: 300000
   jpa:
     hibernate:
       ddl-auto: validate
@@ -15,7 +22,7 @@ spring:
     open-in-view: false
   sql:
     init:
-      mode: never
+      mode: always
       schema-locations: classpath:init.sql
   flyway:
     enabled: false
@@ -30,6 +37,15 @@ app:
     storage-dir: /tmp/bid-knowledge-files
     embedding-concurrency: 6
     reindex-concurrency: 2
+  vector:
+    provider: milvus
+    milvus:
+      host: 120.27.212.35
+      port: 19530
+      collection: knowledge_chunk_coll
+      embedding-dim: 256
+      nprobe: 16
+      shards-num: 2
   upload:
     storage-dir: /tmp/bid-doc-uploads
   ai:
@@ -42,10 +58,10 @@ app:
     keyword-model: glm-5
     openai:
       base-url: https://integrate.api.nvidia.com/v1
-      api-key: 
+      api-key: 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
     alibaba:
       base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
-      api-key: 
+      api-key: sk-3423fb22eb9a45b2b0a450d81654f810
     baidu:
       auth-url: https://aip.baidubce.com/oauth/2.0/token
       chat-url: https://qianfan.baidubce.com/v2/chat/completions
