--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://120.27.212.35:13307/ai_smart?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&autoReconnect=true
+    url: jdbc:mysql://127.0.0.1:13307/ai_smart?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&autoReconnect=true
     username: root
     password: qwe123999mn@123
     hikari:
@@ -42,8 +42,8 @@ app:
     milvus:
       host: 120.27.212.35
       port: 19530
-      collection: knowledge_chunk_coll
-      embedding-dim: 256
+      collection: knowledge_chunk_vector
+      embedding-dim: 1024
       nprobe: 16
       shards-num: 2
   upload:
@@ -51,17 +51,17 @@ app:
   ai:
     provider: MOCK
     chat-provider: openai
-    embedding-provider: alibaba
+    embedding-provider: openai
     chat-model: nvidia/nemotron-3-nano-30b-a3b
     # chat-model: z-ai/glm5
-    embedding-model: multimodal-embedding-v1
-    keyword-model: glm-5
+    embedding-model: nvidia/nv-embedqa-e5-v5
+    keyword-model: moonshotai/kimi-k2.5
     openai:
       base-url: https://integrate.api.nvidia.com/v1
-      api-key: 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
+      api-key: 
     alibaba:
       base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
-      api-key: sk-3423fb22eb9a45b2b0a450d81654f810
+      api-key: 
     baidu:
       auth-url: https://aip.baidubce.com/oauth/2.0/token
       chat-url: https://qianfan.baidubce.com/v2/chat/completions
