领域词典功能优化

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -37,6 +37,8 @@ app:
     storage-dir: /codex/knowledge
     embedding-concurrency: 6
     reindex-concurrency: 2
+    # 词典启用：图谱实体关系基于人工领域词典抽取（企业可控）
+    domain-lexicon-enabled: true
   vector:
     provider: milvus
     milvus:
@@ -54,11 +56,14 @@ app:
     embedding-provider: openai
     chat-model: nvidia/nemotron-3-nano-30b-a3b
     # chat-model: z-ai/glm5
-    embedding-model: nvidia/nv-embedqa-e5-v5
+    embedding-model: baai/bge-m3
     keyword-model: moonshotai/kimi-k2.5
     openai:
       base-url: https://integrate.api.nvidia.com/v1
       api-key: 
+      api-keys:  
+        - 
+        -
     alibaba:
       base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
       api-key: 
