--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,9 +8,9 @@
   <name>bid-doc-collab-backend</name>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
     <spring-boot.version>3.2.5</spring-boot.version>
-    <langchain4j.version>0.31.0</langchain4j.version>
+    <langchain4j.version>1.11.0</langchain4j.version>
     <jjwt.version>0.12.5</jjwt.version>
   </properties>
 
@@ -79,6 +79,11 @@
       <groupId>dev.langchain4j</groupId>
       <artifactId>langchain4j</artifactId>
       <version>${langchain4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-community-llm-graph-transformer</artifactId>
+      <version>1.11.0-beta19</version>
     </dependency>
 
     <dependency>
